--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,6 +46,8 @@ dependencies:
   intl: ^0.20.2
   easy_localization: ^3.0.8
   flutter_native_splash: ^2.4.6
+  flutter_svg: ^2.2.1
+  flutter_screenutil: ^5.9.3
 
 dev_dependencies:
   flutter_test:
